--- a/src/app/data-cards/data-cards.component.html
+++ b/src/app/data-cards/data-cards.component.html
@@ -3,7 +3,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <p class="title">
-      Statistics
+          Statistics
         </p>
         <p class="subtitle">
           Smart Clinic
@@ -26,15 +26,13 @@
 
                 <div class="media-content">
                   <div class="content">
-                    <h1 class="title is-size-4">Columns</h1>
+                    <h1 class="title is-size-4">Title</h1>
 
-                    <strong>Male</strong> 23 <br>
-                    <strong>Male</strong> 23
 
                   </div>
                 </div>
               </article>
-              <span (click)="activateModal()" class="button is-link modal-button" data-target="modal-image2">Image modal</span>
+              <span (click)="activateModal()" class="button is-link modal-button" data-target="modal-image2">More</span>
 
 
             </div>
@@ -52,24 +50,65 @@
             <p class="card-header-title">
               Component
             </p>
-           
+
           </header>
           <div class="card-content">
             <div class="content">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-              <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
-              <br>
-              <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th class="is-size-4">Title</th>
+                    <th class="is-size-4">Value</th>
+                   
+
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <th class="has-text-link has-text-weight-bold	is-size-4	">GOPD Male Attendance and female attendance</th>
+                    <td class="has-text-primary	has-text-weight-bold is-size-4	">5000</td>
+                   
+                  </tr>
+                  <tr>
+                    <th class="has-text-link has-text-weight-bold	is-size-4	">male</th>
+                    <td class="has-text-primary	has-text-weight-bold is-size-4	">38</td>
+                   
+                  </tr>
+                  <tr>
+                    <th class="has-text-link has-text-weight-bold	is-size-4	">male</th>
+                    <td class="has-text-primary	has-text-weight-bold is-size-4	">38</td>
+                   
+                  </tr>
+                  <tr>
+                    <th class="has-text-link has-text-weight-bold	is-size-4	">male</th>
+                    <td class="has-text-primary	has-text-weight-bold is-size-4	">38</td>
+                   
+                  </tr>
+                  <tr>
+                    <th class="has-text-link has-text-weight-bold	is-size-4	">male</th>
+                    <td class="has-text-primary	has-text-weight-bold is-size-4	">38</td>
+                   
+                  </tr>
+                  <tr>
+                    <th class="has-text-link has-text-weight-bold	is-size-4	">male</th>
+                    <td class="has-text-primary	has-text-weight-bold is-size-4	">38</td>
+                   
+                  </tr>
+
+
+                </tbody>
+              </table>
             </div>
           </div>
           <footer class="card-footer">
-         
-            <a  class="card-footer-item" (click)="deactivateModal()">Close</a>
-           
+
+            <a class="card-footer-item" (click)="deactivateModal()">Close</a>
+
           </footer>
         </div>
       </div>
-      <button (click)="deactivateModal" class="modal-close is-large" aria-label="close"></button>
+      <button (click)="deactivateModal()" class="modal-close is-large" aria-label="close"></button>
     </div>
 
   </section>
@@ -78,4 +117,3 @@
     HERE BE MODALS
     ===============  -->
   <!-- 3dFlipVertical card tiny -->
-  
