--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.material-icons{
+    font-family: 'Material Icons' !important;
+}
